# kiroku

./: CLAUDE.md  Cargo.nix  Cargo.toml  flake.nix
src/: db.rs  frecency.rs  lib.rs  store.rs
